--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
   "urls" : ["https://discord.com/api/v9/channels/YOUR-CHANNEL-ID-HERE/messages", "https://discord.com/api/v9/channels/YOUR-CHANNEL-ID-HERE/messages"],
   "authKey": "YOUR-AUTH-KEY-HERE-DON'T-SHARE-IT",
-  "variations" : [ "Message1", "Message2", ""]
+  "api_key": "YOUR_API_KEY",
+  "question": "Reword, 'Good Morning Everyone! [:'"
 }
